--- a/app/assets/stylesheets/custom.css.erb
+++ b/app/assets/stylesheets/custom.css.erb
@@ -36,6 +36,16 @@ div.loading-gif {
   overflow-y: scroll;
 }
 
+.highlight-success {
+  color: #fff !important;
+  background-color: #77b300 !important;
+}
+
+.highlight-success > *{
+  color: #fff !important;
+  background-color: #77b300 !important;  
+}
+
 .side-arrow {
   position: absolute;  
   width: 100px; 
