adding scroll ability to pages

--- a/app/assets/javascripts/templates/competition.hbs
+++ b/app/assets/javascripts/templates/competition.hbs
@@ -1,3 +1,4 @@
+<div id="competition" class="scroll">
 <h2>{{name}}</h2>
 <div class="well well-sm">
   <p class="lead text-center">Description</p>
@@ -97,5 +98,4 @@
   </div>
 
 </div>
-
-
+</div>
