--- a/app/assets/javascripts/templates/index.hbs
+++ b/app/assets/javascripts/templates/index.hbs
@@ -1,66 +1,68 @@
-<h1>Dashboard</h1>
-<div class="row">
-  <div class="col-md-4">
-    <div class="well">
-      <h3 {{bind-attr class="selectedExercise:text-info"}}>{{title}}</h3>
-    </div>
-    <table class="table">
-      <tr>
-        <th>Name</th>
-        <th>Current Rank</th>
-        <th>Score</th>
-      </tr>
-      {{#each currentCompJoins}}
+<div id="index" class="scroll">
+  <h1>Dashboard</h1>
+  <div class="row">
+    <div class="col-md-4">
+      <div class="well">
+        <h3 {{bind-attr class="selectedExercise:text-info"}}>{{title}}</h3>
+      </div>
+      <table class="table">
         <tr>
-          <td>{{#link-to "competition" this.competition}}{{this.competition.name}}{{/link-to}}</td>
-          <td>{{this.rank}}</td>
-          <td>{{this.total}}</td>
+          <th>Name</th>
+          <th>Current Rank</th>
+          <th>Score</th>
         </tr>
-      {{else}}
-        {{#if selectedExercise}}
-        <tr>
-          <td colspan="3">
-            <p class="lead text-warning text-center">You are not currently in any competitions that include {{selectedExercise.name}}. Would you like to</p>
-            <a href="#" class="btn btn-success center-block" {{action "createCompetition" selectedExercise}}> Create a new one ?</a> 
-            <p class="text-center">- OR -</p> 
-            <a href="#" class="btn btn-primary center-block" {{action "joinCompetition" selectedExercise}}>join an existing one ?</a>
-          </td>
-        </tr>
+        {{#each currentCompJoins}}
+          <tr>
+            <td>{{#link-to "competition" this.competition}}{{this.competition.name}}{{/link-to}}</td>
+            <td>{{this.rank}}</td>
+            <td>{{this.total}}</td>
+          </tr>
         {{else}}
-        <tr>
-          <td colspan="3">Competitions not currently available. Either you aren't in any, or they haven't loaded yet.</p></td>
-        </tr>
-        {{/if}}
-      {{/each}}
-    </table>
-  </div>
-
-  <div class="col-md-8">
-    <div class="well">
-      <h3>Recent Site Activity</h3>
+          {{#if selectedExercise}}
+          <tr>
+            <td colspan="3">
+              <p class="lead text-warning text-center">You are not currently in any competitions that include {{selectedExercise.name}}. Would you like to</p>
+              <a href="#" class="btn btn-success center-block" {{action "createCompetition" selectedExercise}}> Create a new one ?</a> 
+              <p class="text-center">- OR -</p> 
+              <a href="#" class="btn btn-primary center-block" {{action "joinCompetition" selectedExercise}}>join an existing one ?</a>
+            </td>
+          </tr>
+          {{else}}
+          <tr>
+            <td colspan="3">Competitions not currently available. Either you aren't in any, or they haven't loaded yet.</p></td>
+          </tr>
+          {{/if}}
+        {{/each}}
+      </table>
     </div>
-    <ul class="list-group">
-      {{#each controller}}
-        <li class="list-group-item">
-          <div class="row">    
-            <br>
-            <div class="col-md-2 col-sm-3 text-center">
-              <a class="story-img" href="#"><img src="/assets/dumbbell-icon.png" style="width:60px;height:60px" class="img-circle"></a>
-            </div>
-            <div class="col-md-10 col-sm-9">
-              <h5>{{description}}</h5>
-              <div class="row">
-                <div class="col-xs-9">
-                  <ul class="list-inline"><li><a href="#">{{shortDateTime createdAt}}</a></li></ul>
-                  </div>
-                <div class="col-xs-3"></div>
+
+    <div class="col-md-8">
+      <div class="well">
+        <h3>Recent Site Activity</h3>
+      </div>
+      <ul class="list-group">
+        {{#each controller}}
+          <li class="list-group-item">
+            <div class="row">    
+              <br>
+              <div class="col-md-2 col-sm-3 text-center">
+                <a class="story-img" href="#"><img src="/assets/dumbbell-icon.png" style="width:60px;height:60px" class="img-circle"></a>
+              </div>
+              <div class="col-md-10 col-sm-9">
+                <h5>{{description}}</h5>
+                <div class="row">
+                  <div class="col-xs-9">
+                    <ul class="list-inline"><li><a href="#">{{shortDateTime createdAt}}</a></li></ul>
+                    </div>
+                  <div class="col-xs-3"></div>
+                </div>
               </div>
             </div>
-          </div>
-          <hr>
-        </li>
-      {{/each}}
-    </ul>
+            <hr>
+          </li>
+        {{/each}}
+      </ul>
+    </div>
   </div>
 </div>
 {{currentUser.competitionJoins}}
