--- a/app/assets/javascripts/templates/user.hbs
+++ b/app/assets/javascripts/templates/user.hbs
@@ -1,4 +1,4 @@
-<div class="panel">
+<div id="user_view" class="panel scroll">
   <div class="panel-heading">
     <h3 class="panel-title">{{handle}}</h3>
   </div>
