--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -32,24 +32,22 @@
   </div>
 </div>
 
-<div class="container-fluid">
+<div class="container">
 <div class="row">
-  <div {{bind-attr class="showExercisePanel:col-md-9:col-md-11"}}>
+  <div {{bind-attr class="showExercisePanel:col-md-9:col-md-12"}}>
+    {{#unless showExercisePanel}}
+      <a href="#" class="pull-right" {{action "toggleExercisePanel"}}>
+        <p class="btn btn-default text-center">
+          <i class="fa fa-plus-square"></i><br>
+          Log Exercise
+        </p>
+      </a>
+    {{/unless}}
     {{outlet modal}}
     {{view WorkoutWars.FlashView model=WorkoutWars.flash}}
     {{outlet}}
   </div>
-  <div {{bind-attr class="showExercisePanel:panel showExercisePanel:col-md-3:col-md-1"}}>
-    <a href="#" {{action "toggleExercisePanel"}}>
-      {{#if showExercisePanel}}
-        <i class="fa fa-3x fa-minus-square"></i>
-      {{else}}
-        <p class="btn btn-default text-center">
-          <i class="fa fa-3x fa-plus-square"></i><br>
-          Log Exercise
-        </p>
-      {{/if}}
-    </a>
+  <div {{bind-attr class="showExercisePanel:panel showExercisePanel:col-md-3"}}>
     {{outlet "sidebar"}}
   </div>
 </div> 
