--- a/app/assets/javascripts/templates/competitions.hbs
+++ b/app/assets/javascripts/templates/competitions.hbs
@@ -1,3 +1,4 @@
+<div id="competitions" class="scroll">
 <h1>Competitions</h1>
 <div class="row">
   <div class="col-md-5">
@@ -36,4 +37,4 @@
     {{outlet}}
   </div>
 </div>
-
+</div>
