--- a/app/assets/javascripts/templates/users/index.hbs
+++ b/app/assets/javascripts/templates/users/index.hbs
@@ -1,19 +1,15 @@
-<div class="panel">
+<div id="user_index" class="panel scroll">
   <div class="panel-heading">
     <h3 class="panel-title">Information for other Users</h3>
   </div>
   <div class="panel-body">
-    <div class="row">
-      <div class="col-sm-6">
-        <h2 class="featurette-heading">They are your friends. <span class="text-muted">They are your enemies.</span></h2>
-          <p class="lead">The goal of the <strong>WorkoutWars</strong> user is to increase thier own personal fitness. But who doesn't love a little friendly competition? See how you stack up against your fellow users by selecting their profile to left.</p>
-          <p class="lead text-success">Select a user from the left to view their profile</p>
-      </div>
+    <h2 class="featurette-heading">They are your friends. <span class="text-muted">They are your enemies.</span></h2>
+    <img src="/assets/pushup2.jpg" alt="challenges" class="img-rounded img-responsive">
 
-      <div class="col-sm-6">
-        <img src="/assets/pushup2.jpg" alt="challenges" class="img-rounded img-responsive">
-      </div>
-    </div>
+    <hr>
+
+    <p class="lead">The goal of the <strong>WorkoutWars</strong> user is to increase thier own personal fitness. But who doesn't love a little friendly competition? See how you stack up against your fellow users by selecting their profile to left.</p>
+    <p class="lead text-success">Select a user from the left to view their profile</p>
   </div>
 </div>
 
