--- a/app/assets/stylesheets/custom.css.erb
+++ b/app/assets/stylesheets/custom.css.erb
@@ -7,7 +7,7 @@ body {
   background-size:100%;
   background-image:url('background.png');
   background-repeat: no-repeat;
-  padding-top: 70px; 
+  padding-top: 50px; 
 }
 
 
@@ -34,6 +34,7 @@ div.loading-gif {
 
 .scroll {
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .highlight-success {
