updates more views

--- a/app/assets/javascripts/templates/competitions/index.hbs
+++ b/app/assets/javascripts/templates/competitions/index.hbs
@@ -1,4 +1,4 @@
-<div id="competitions_index" class="panel scroll">
+<div id="competitions_index" class="panel">
   <div class="panel-heading">
     <h3 class="panel-title">Information for active competitions</h3>
   </div>
