--- a/app/assets/javascripts/templates/user.hbs
+++ b/app/assets/javascripts/templates/user.hbs
@@ -17,6 +17,6 @@
         <p>Experience to next level: {{nextLevelExperience}}</p>
       </div>
     </div>
-    {{view WorkoutWars.UserStatView}}
+    {{view WorkoutWars.UserExperienceView}}
   </div>
 </div>
