--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -34,12 +34,11 @@
 
 <div class="container">
 <div class="row">
-  <div {{bind-attr class="showExercisePanel:col-md-9:col-md-12"}}>
+  <div {{bind-attr class="showExercisePanel:col-md-9:col-md-12 showExercisePanel::offset-exercise-button"}}>
     {{#unless showExercisePanel}}
-      <a href="#" class="pull-right" {{action "toggleExercisePanel"}}>
+      <a href="#" class="pull-right absolute-right" {{action "toggleExercisePanel"}}>
         <p class="btn btn-default text-center">
-          <i class="fa fa-plus-square"></i><br>
-          Log Exercise
+          <i class="fa fa-plus-square"></i> Log Exercise
         </p>
       </a>
     {{/unless}}
