--- a/app/assets/javascripts/templates/profile.hbs
+++ b/app/assets/javascripts/templates/profile.hbs
@@ -12,7 +12,7 @@
         <div class="progress">
           {{bs-progressbar progress=levelProgress}}
         </div>
-        <table class="table table-condensed table-bordered">
+        <table class="table table-condensed table-bordered table-responsive">
           <tr><td><strong>Email:</strong> {{email}}</td></tr>
           <tr><td><strong>Nickname:</strong> {{nickname}}</td></tr>
           <tr><td><strong>Age:</strong> {{age}}</td></tr>
@@ -37,9 +37,6 @@
       </li>
       <li>
         {{#link-to "profile.exercises"}}Exercise History{{/link-to}}
-      </li>
-      <li>
-        {{#link-to "profile.accolades"}}Accolades{{/link-to}}
       </li>
       <li>
         {{#link-to "profile.edit"}}Settings{{/link-to}}
