--- a/app/assets/javascripts/templates/profile/stats.hbs
+++ b/app/assets/javascripts/templates/profile/stats.hbs
@@ -4,7 +4,7 @@
   </div>
   <div class="panel-body">
     <h4 class="text-center">Exercise Totals</h4>
-    <table class="table">
+    <table class="table table-condensed table-bordered table-responsive">
       <tr>
         {{#each exerciseTotals}}
           <th>{{this.name}}</th>
