--- a/app/assets/stylesheets/custom.css.erb
+++ b/app/assets/stylesheets/custom.css.erb
@@ -26,6 +26,12 @@ div.loading-gif {
   src: url('<%= asset_path "glyphicons-halflings-regular.eot?#iefix" %>') format('embedded-opentype'), url('<%= asset_path "glyphicons-halflings-regular.woff" %>') format('woff'), url('<%= asset_path "glyphicons-halflings-regular.ttf" %>') format('truetype'), url('<%= asset_path "glyphicons-halflings-regular.svg#glyphicons_halflingsregular" %>') format('svg');
 }
 
+.absolute-right {
+  position: absolute !important;  
+  right: 15px;
+  z-index: 1;
+}
+
 .terms {
   height: 100px;
   overflow-y: scroll;
