--- a/app/assets/javascripts/templates/profile.hbs
+++ b/app/assets/javascripts/templates/profile.hbs
@@ -1,3 +1,4 @@
+<div id="profile" class="scroll">
 <h1>Profile</h1>
 <div class="row">
   <div class="col-md-4">
@@ -47,4 +48,5 @@
     {{outlet}}
 
   </div>
+</div>
 </div>
