--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -23,7 +23,7 @@
             </a>
           </li>
         </ul>
-        <p class="navbar-text navbar-right hidden-sm">Signed in as {{currentUser.handle}}</p>
+        <p class="navbar-text navbar-right hidden-sm hidden-xs">Logged in as {{currentUser.handle}}</p>
         <ul class="nav navbar-nav pull-right hidden-xs">
           <li class="divider"></li>
           <li>
@@ -35,6 +35,10 @@
       </div><!--/.nav-collapse -->
     </div>
   </div>
+</div>
+
+<div class="visible-sm visible-xs well well-sm">
+  <p class="text-center text-info">Logged in as {{currentUser.handle}}</p>
 </div>
 
 <div class="container">
