--- a/app/assets/javascripts/templates/profile/stats.hbs
+++ b/app/assets/javascripts/templates/profile/stats.hbs
@@ -3,20 +3,20 @@
     <h3 class="panel-title">Stats</h3>
   </div>
   <div class="panel-body">
-    <h4 class="text-center">Exercise Totals</h4>
-    <table class="table table-condensed table-bordered table-responsive">
+    {{view WorkoutWars.UserExperienceView}}
+    <hr>
+    <table class="table table-condensed table-bordered table-striped table-responsive text-center">
       <tr>
-        {{#each exerciseTotals}}
-          <th>{{this.name}}</th>
-        {{/each}}
+        <th colspan="2"><p class="text-center">Exercise Totals</p></th>
       </tr>
-      <tr>
-        {{#each exerciseTotals}}
-          <td>{{this.value}}</td>
-        {{/each}}
+      {{#each exerciseTotals}}
+      <tr class="text-center">
+        <td>{{this.name}}</td>
+        <td>{{this.value}}</td>   
       </tr>
+      {{/each}}
     </table>
     <hr>
-    {{view WorkoutWars.UserExperienceView}}
+    
   </div>
 </div>
