fix privacy policy

--- a/app/assets/stylesheets/custom.css.erb
+++ b/app/assets/stylesheets/custom.css.erb
@@ -10,14 +10,16 @@ body {
   padding-top: 50px; 
 }
 
-
-
 div.loading-gif {
   margin: 0 auto;
   background-image: url('<%= asset_path "loader.gif" %>');
   background-size: 200px 200px;
   height: 200px;
   width: 200px;
+}
+
+#privacy {
+  padding: 10px;
 }
 
 @font-face {
@@ -33,7 +35,8 @@ div.loading-gif {
 }
 
 .terms {
-  height: 100px;
+  padding: 10px;
+  height: 150px;
   overflow-y: scroll;
   border: 1px solid #eee;
 }
