--- a/app/views/static/privacy.html.erb
+++ b/app/views/static/privacy.html.erb
@@ -1,1 +1,5 @@
-<%= render "shared/privacy" %>
+<div class="panel">
+  <div class="panel-body">
+    <%= render "shared/privacy" %>
+  </div>
+</div>
