adds active to user notifications

--- a/app/assets/javascripts/templates/profile/edit.hbs
+++ b/app/assets/javascripts/templates/profile/edit.hbs
@@ -69,6 +69,14 @@
 
     <br />
 
+    {{#if userNotifications}}
+      <p> Notifications
+      <ul>
+      {{#each userNotifications}} 
+        <li>{{this}}</li>
+      {{/each}}
+      </ul>
+    {{/if}}
     <div class="row">
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
