adds no-scroll option

--- a/app/assets/stylesheets/custom.css.erb
+++ b/app/assets/stylesheets/custom.css.erb
@@ -46,6 +46,10 @@ div.loading-gif {
   overflow-x: hidden;
 }
 
+.no-scroll {
+  overflow: hidden;
+}
+
 .highlight-success {
   color: #fff !important;
   background-color: #77b300 !important;
