--- a/app/assets/javascripts/templates/new_exercise.hbs
+++ b/app/assets/javascripts/templates/new_exercise.hbs
@@ -8,6 +8,7 @@
   <p class="help-block text-info">When you log an exercise, it will count toward all of your competitions that use that   specific exercise.
   </p>
 </div>
+{{#link-to "exercises.create"}}Don't see an exercise you want to log? Click here to request that we add it!{{/link-to}}
 <ul class="list-group">
   <li class="list-group-item">
     {{#form-for model wrapper="bootstrap"}}
