--- a/app/assets/javascripts/templates/new_exercise.hbs
+++ b/app/assets/javascripts/templates/new_exercise.hbs
@@ -1,5 +1,5 @@
 {{#if showExercisePanel}}
-<div id="new_exercise" class="scroll">
+<div id="new_exercise" class="no-scroll">
 <a href="#" class="pull-right" {{action "toggleExercisePanel"}}>
   <i class="fa fa-3x fa-minus-square"></i>
 </a>
