--- a/app/assets/javascripts/templates/index.hbs
+++ b/app/assets/javascripts/templates/index.hbs
@@ -1,4 +1,4 @@
-<div id="index" class="no-scroll">
+<div id="index" class="scroll">
   <h1>Dashboard</h1>
   <div class="row">
     <div class="col-md-4">
