--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,7 @@
                 Sign Up Now!
               </a>
             </li>
+            <li><%= link_to "Tutorials", tutorials_path %></li>
           </ul>
 
           <ul class="nav navbar-nav navbar-right">
