Adds the remaining tutorials

--- a/app/views/static/tutorials.html.erb
+++ b/app/views/static/tutorials.html.erb
@@ -2,17 +2,45 @@
   <div class="panel-body">
     <h1 class="text-center">Website Tutorials</h1>
     <hr>
-    <h4 class="text-center">Sign Up Tutorial</h4>
+    <h4 class="text-center">Sign Up</h4>
     <p class="text-center"><embed src="<%= asset_path('signup.swf') %>" width="640" height="480"/></p>
 
-    <h4 class="text-center">Login Tutorial</h4>
+    <h4 class="text-center">Login</h4>
     <p class="text-center"><embed src="<%= asset_path('login.swf') %>" width="640" height="480"/></p>
 
-    <h4 class="text-center">Dashboard Tutorial</h4>
+    <h4 class="text-center">Dashboard</h4>
     <p class="text-center"><embed src="<%= asset_path('dashboard.swf') %>" width="640" height="480"/></p> 
+
+    <h4 class="text-center">Competitions</h4>
+    <p class="text-center"><embed src="<%= asset_path('competitions.swf') %>" width="640" height="480"/></p> 
+
+    <h4 class="text-center">Exercises</h4>
+    <p class="text-center"><embed src="<%= asset_path('exercises.swf') %>" width="640" height="480"/></p> 
+
+    <h4 class="text-center">Profile</h4>
+    <p class="text-center"><embed src="<%= asset_path('profile.swf') %>" width="640" height="480"/></p> 
+
+    <h4 class="text-center">Users</h4>
+    <p class="text-center"><embed src="<%= asset_path('users.swf') %>" width="640" height="480"/></p> 
 
     <br>
     <h1 class="text-center">IOS Tutorials</h1>
     <hr>
+
+    <h4 class="text-center">Login</h4>
+    <p class="text-center"><embed src="<%= asset_path('ios-login.swf') %>" width="640" height="480"/></p> 
+
+    <h4 class="text-center">Competitions</h4>
+    <p class="text-center"><embed src="<%= asset_path('ios-competition.swf') %>" width="640" height="480"/></p> 
+
+    <h4 class="text-center">Create Competitions</h4>
+    <p class="text-center"><embed src="<%= asset_path('ios-createcomp.swf') %>" width="640" height="480"/></p> 
+
+    <h4 class="text-center">Exercises</h4>
+    <p class="text-center"><embed src="<%= asset_path('ios-exercises.swf') %>" width="640" height="480"/></p> 
+
+    <h4 class="text-center">Settings</h4>
+    <p class="text-center"><embed src="<%= asset_path('ios-settings.swf') %>" width="640" height="480"/></p> 
+
   </div>
 </div>
