removes lots of tutorial videos for file size

--- a/app/views/static/tutorials.html.erb
+++ b/app/views/static/tutorials.html.erb
@@ -1,12 +1,8 @@
 <div class="panel">
   <div class="panel-body">
     <h1 class="text-center">Website Tutorials</h1>
+    <p class="text-warning text-center">Please be patient, video files are large and may take a while to load.</p>s
     <hr>
-    <h4 class="text-center">Sign Up</h4>
-    <p class="text-center"><embed src="<%= asset_path('signup.swf') %>" width="640" height="480"/></p>
-
-    <h4 class="text-center">Login</h4>
-    <p class="text-center"><embed src="<%= asset_path('login.swf') %>" width="640" height="480"/></p>
 
     <h4 class="text-center">Dashboard</h4>
     <p class="text-center"><embed src="<%= asset_path('dashboard.swf') %>" width="640" height="480"/></p> 
@@ -15,13 +11,39 @@
     <p class="text-center"><embed src="<%= asset_path('competitions.swf') %>" width="640" height="480"/></p> 
 
     <h4 class="text-center">Exercises</h4>
-    <p class="text-center"><embed src="<%= asset_path('exercises.swf') %>" width="640" height="480"/></p> 
+    <p class="text-center"><embed src="http://www.swfcabin.com/swf-files/1398310396.swf" width="640" height="480"/></p> 
+
+    <br>
+    <h1 class="text-center">IOS Tutorials</h1>
+    <p class="text-warning text-center">Please be patient, video files are large and may take a while to load.</p>
+    <hr>
+
+    <h4 class="text-center">Login</h4>
+    <p class="text-center"><embed src="http://www.swfcabin.com/swf-files/1398309151.swf" width="230" height="480"/></p> 
+
+    <h4 class="text-center">Create Competitions</h4>
+    <p class="text-center"><embed src="http://www.swfcabin.com/swf-files/1398310297.swf" width="230" height="480"/></p> 
+
+    <h4 class="text-center">Exercises</h4>
+    <p class="text-center"><embed src="http://www.swfcabin.com/swf-files/1398309821.swf" width="230" height="480"/></p> 
+
+    <h4 class="text-center">Settings</h4>
+    <p class="text-center"><embed src="http://www.swfcabin.com/swf-files/1398308646.swf" width="230" height="480"/></p> 
+
+  </div>
+</div>
+    
+<!--     <h4 class="text-center">Sign Up</h4>
+    <p class="text-center"><embed src="<%= asset_path('signup.swf') %>" width="640" height="480"/></p>
+
+    <h4 class="text-center">Login</h4>
+    <p class="text-center"><embed src="<%= asset_path('login.swf') %>" width="640" height="480"/></p>
 
     <h4 class="text-center">Profile</h4>
     <p class="text-center"><embed src="<%= asset_path('profile.swf') %>" width="640" height="480"/></p> 
 
     <h4 class="text-center">Users</h4>
-    <p class="text-center"><embed src="<%= asset_path('users.swf') %>" width="640" height="480"/></p> 
-    
-  </div>
-</div>
+    <p class="text-center"><embed src="<%= asset_path('users.swf') %>" width="640" height="480"/></p>  -->
+
+    <h4 class="text-center">Competitions</h4>
+    <p class="text-center"><embed src="<%= asset_path('ios-competition.swf') %>" width="230" height="480"/></p> 
