--- a/app/views/static/tutorials.html.erb
+++ b/app/views/static/tutorials.html.erb
@@ -43,7 +43,7 @@
     <p class="text-center"><embed src="<%= asset_path('profile.swf') %>" width="640" height="480"/></p> 
 
     <h4 class="text-center">Users</h4>
-    <p class="text-center"><embed src="<%= asset_path('users.swf') %>" width="640" height="480"/></p>  -->
+    <p class="text-center"><embed src="<%= asset_path('users.swf') %>" width="640" height="480"/></p> 
 
     <h4 class="text-center">Competitions</h4>
-    <p class="text-center"><embed src="<%= asset_path('ios-competition.swf') %>" width="230" height="480"/></p> 
+    <p class="text-center"><embed src="<%= asset_path('ios-competition.swf') %>" width="230" height="480"/></p>  -->
